--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,8 @@
  .logo{
     font-weight: 600;
  }
- 
- 
  .banner{
-    background-image: url(../portfolio/image/banner.png);
+    background-image: url(".../portfolio/image/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 250px;
