--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     font-weight: 600;
  }
  .banner{
-    background-image: url(".../portfolio/image/banner.png");
+    background-image: url("../portfolio/image/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 250px;
