--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     font-weight: 600;
  }
  .banner{
+    width: auto;
     background-image: url(./image/banner.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -19,15 +20,14 @@
     opacity: 0;
     transition: all 2s;
 }
-.in-bdiv{
-    width: 250px;
-    font-size: 30px;
-}
+
+
 .name{
+    width: auto;
     font-size: 40px;
     font-weight: 600;
     background: 
-    linear-gradient(45deg,#4158de 10%,#c850ce 45%,#ffcc7e 50%);
+    linear-gradient(45deg,#4158de 10%, #ffcc7e 40%, #c850ce 50%);
     background-clip: text;
     color: transparent;
     
@@ -36,6 +36,7 @@ u{
     color:aqua;
 }
 .info{
+    
     padding-bottom: 20px;
     margin-top: -25px;
     
