--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,16 @@ a{
     align-items: center;
     transform: scaleX(1);
 }
+
+.crd1 {
+    padding-bottom: 88px;
+}
+.crd3{
+    padding-bottom: 10px;
+}
+.crd4{
+    padding-bottom: 65px;
+}
+.crd6{
+    padding-bottom: 58px;
+}
